--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#61dafb",
   "icons": [
     {
-      "src": "icon-192-heart.png",
+      "src": "icon-192-quiet.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512-heart.png",
+      "src": "icon-512-quiet.png",
       "sizes": "512x512",
       "type": "image/png"
     }
