--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "background_color": "#0b0c10",
   "theme_color": "#61dafb",
   "icons": [
-    { "src": "/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/icon-512.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "/icon-192-quiet.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/icon-512-quiet.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
